Fix search bar overflow on narrow windows

--- a/src/components/NavBar/EXV6NavBar.styl
+++ b/src/components/NavBar/EXV6NavBar.styl
@@ -514,6 +514,8 @@ header.NavBar {
     .OmniSearch-input-container {
         display: inline-flex;
         align-items: center;
+        flex: 1;
+        flex-shink: 1;
         max-width: 20rem;
         position: relative;
     }
@@ -526,7 +528,8 @@ header.NavBar {
 
     .OmniSearch-input {
         flex: 1;
-        //width: 100%;
+        flex-shrink: 1;
+        width: 100%;
         padding-left: 1.5rem;
     }
 
